--- a/.github/workflows/market.yml
+++ b/.github/workflows/market.yml
@@ -2,7 +2,7 @@ name: Daily Market Report
 
 on:
   schedule:
-    - cron: '30 12 * * 1-5'   # Runs 6 PM IST (12:30 UTC)
+    - cron: '30 12 * * 1-5'   # 6 PM IST
   workflow_dispatch:
 
 jobs:
@@ -12,6 +12,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Show files in root
+        run: |
+          pwd
+          ls -l
 
       - name: Set up Python
         uses: actions/setup-python@v4
