--- a/.github/workflows/market.yml
+++ b/.github/workflows/market.yml
@@ -2,7 +2,7 @@ name: Daily Market Report
 
 on:
   schedule:
-    - cron: '30 12 * * 1-5'   # 6 PM IST
+    - cron: '30 12 * * 1-5'   # Runs 6 PM IST, Monday to Friday
   workflow_dispatch:
 
 jobs:
@@ -13,11 +13,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Show files in root
-        run: |
-          pwd
-          ls -l
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -26,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Run script
+      - name: Run market report
         run: python market_report.py
         env:
           SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
