--- a/.github/workflows/market.yml
+++ b/.github/workflows/market.yml
@@ -2,26 +2,33 @@ name: Daily Market Report
 
 on:
   schedule:
-    - cron: '30 12 * * 1-5'   # Runs 6 PM IST, Monday to Friday
-  workflow_dispatch:
+    # Runs every day at 4:00 PM IST → 10:30 UTC
+    - cron: '30 10 * * *'
+  workflow_dispatch: # allows manual trigger anytime
 
 jobs:
-  run-script:
+  run-market-report:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # Step 1: Checkout the repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Step 2: Setup Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: 3.11
 
+      # Step 3: Install dependencies
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Run market report
+      # Step 4: Run market report
+      - name: Run Market Report
         run: python market_report.py
         env:
           SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
