--- a/.github/workflows/market.yml
+++ b/.github/workflows/market.yml
@@ -22,10 +22,11 @@ jobs:
           python-version: 3.11
 
       # Step 3: Install dependencies
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - - name: Install dependencies
+      run: |
+      python -m pip install --upgrade pip
+      pip install -r requirements.txt
+    
 
       # Step 4: Run market report
       - name: Run Market Report
