--- a/.github/workflows/market.yml
+++ b/.github/workflows/market.yml
@@ -1,9 +1,47 @@
 name: Daily Market Report
 on:
   schedule:
-    # Runs every day at 4:00 PM IST → 10:30 UTC
-    - cron: '30 10 * * *'
-  workflow_dispatch: # allows manual trigger anytime
+    # Morning Report - 8:00 AM IST (Market Opening)
+    - cron: '30 2 * * 1-5'
+    
+    # Mid-Day Report - 12:30 PM IST (Lunch Time)
+    - cron: '0 7 * * 1-5'
+    
+    # Afternoon Report - 3:30 PM IST (Just Before Market Close)
+    - cron: '0 10 * * 1-5'
+    
+    # Evening Report - 6:00 PM IST (After Market Close)
+    - cron: '30 12 * * 1-5'
+    
+  workflow_dispatch: # Allows manual trigger anytime
+
+jobs:
+  run-market-report:
+    runs-on: ubuntu-latest
+    steps:
+      # Step 1: Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      
+      # Step 2: Setup Python
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+      
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+    
+      # Step 4: Run market report
+      - name: Run Market Report
+        run: python market_report.py
+        env:
+          SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+          SENDER_PASSWORD: ${{ secrets.SENDER_PASSWORD }}
+          RECEIVER_EMAIL: ${{ secrets.RECEIVER_EMAIL }}
 
 jobs:
   run-market-report:
